# buddhabrot-variations

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GreenFractals  LICENSE.txt  Makefile  README.md  cmake_install.cmake
src/: CMakeLists.txt  Constants.h  Constants.hpp  FractalInstance.cpp  FractalInstance.h  FractalInstance.hpp  GreenFractals.cpp  GreenFractals.cxx  GreenFractals.h  ImageGenerator.h  ImageGenerator.hpp
